# miivii-Xavier

./: README.md  backup.sh
Desktop/: open_camera.sh  open_car_chassi.sh  open_radar.sh  record_camera.sh  start_key_control.sh  车辆启动.md  采数据流程.md
robotcar_ws/script/: camera_enable_ros.sh
robotcar_ws/src/robotcar_bringup/src/: bringup.cpp  main.cpp
robotcar_ws/src/robotcar_collect_data/: CMakeLists.txt
robotcar_ws/src/robotcar_collect_data/scripts/: export_image.py
robotcar_ws/src/robotcar_general/config/: robotcar_params.yaml
robotcar_ws/src/robotcar_perception/: CMakeLists.txt
robotcar_ws/src/robotcar_perception/include/robotcar_perception/obstacle_detection/: StereoMatching.h  StereoVisionForADAS.h  StixelEstimation.h  StixelSegmenation.h  SurfaceNormal.h
robotcar_ws/src/robotcar_perception/scripts/: lane_detection.py
robotcar_ws/src/robotcar_perception/scripts/lanenet_model/: my_postprocess.py
robotcar_ws/src/robotcar_perception/scripts/local_utils/config_utils/: parse_config_utils.py
robotcar_ws/src/robotcar_perception/src/obstacle_detection/: StereoMatching.cpp  StereoVisionForADAS.cpp  StixelEstimation.cpp  StixelSegmentation.cpp  main.cpp
robotcar_ws/src/robotcar_slam/: CMakeLists.txt
robotcar_ws/src/ros_miivii_gmsl/: CHANGELOG.md  CMakeLists.txt  README.en  README.zh  package.xml
robotcar_ws/src/ros_miivii_gmsl/launch/: ros_miivii_gmsl_1_node_with_1_camera.launch  ros_miivii_gmsl_1_node_with_4_cameras.launch  ros_miivii_gmsl_2_nodes_with_1_camera.launch  ros_miivii_gmsl_2_nodes_with_8_cameras.launch
(+2 files in other folders)
